test: thumbnail link preview

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#62973d" />
-    <meta name="description" content="Portofolio of my web development projects" />
+    <meta name="description" content="Portfolio showcasing my journey as a software engineer" />
+    <meta
+      property="og:image"
+      content="https://github.com/michaelmhtong/portfolio-mhtong-react/blob/master/src/image/logo.svg"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
