test: thumbnail image

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#62973d" />
     <meta name="description" content="Portfolio showcasing my journey as a software engineer" />
-    <meta
-      property="og:image"
-      content="https://github.com/michaelmhtong/portfolio-mhtong-react/blob/master/src/image/logo.svg"
-    />
+    <meta property="og:image" content="https://i.postimg.cc/bNb7j4XG/logo.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
