--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#62973d" />
-    <meta name="description" content="Portfolio showcasing my journey as a software engineer" />
+    <meta name="description" content="Portfolio showcasing my journey as a developer" />
     <meta property="og:image" content="https://i.postimg.cc/bNb7j4XG/logo.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
     <!--
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Michael Tong | Software Engineer</title>
+    <title>Michael Tong | Full Stack Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
